fixed spacing

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@
   }
 
   .container {
-    max-width: 22rem;
+    min-width: 20rem;
     display: flex;
     flex-direction: column;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
@@ -200,9 +200,9 @@
     background-image: linear-gradient(to top, var(--clr-background-Lightroyalblue), var(--clr-background-Lightslateblue));;
   }
 
-  @media (min-width: 600px) {
+  @media (min-width: 700px) {
     .container {
-      max-width: 41rem;
+      min-width: 40rem;
       display: flex;
       flex-direction: row;
     }
